--- a/lesson3/lesson3/index.html
+++ b/lesson3/lesson3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
@@ -8,17 +9,20 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">Интернет-магазин</div>
+        <button class="btn-cart" type="button">Корзина</button>
+    </header>
 
-<header>
-    <div class="logo">Интернет-магазин</div>
-    <button class="btn-cart" type="button">Корзина</button>
-</header>
+    <main>
+        <div class="products"></div>
+    </main>
 
-<main>
-    <div class="products"></div>
-</main>
+    <dialog open>
+        Native dialog box!
+    </dialog>
 
-<script src="./js/main.js"></script>
-
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
