--- a/lesson3/lesson3/index.html
+++ b/lesson3/lesson3/index.html
@@ -11,16 +11,22 @@
 <body>
     <header>
         <div class="logo">Интернет-магазин</div>
-        <button class="btn-cart" type="button">Корзина</button>
+        <button class="btn-cart" type="button">Корзина<sup></sup></button>
+        <div class="back-hiden"></div>
+        <div class="cart-list">
+            <div class="header product-row">
+                <div class="col1"></div>
+                <div class="col2">Наименование</div>
+                <div class="col3">Кол-во</div>
+                <div class="col4"></div>
+                <div class="col5">Цена</div>
+            </div>
+        </div>
     </header>
 
     <main>
         <div class="products"></div>
     </main>
-
-    <dialog open>
-        Native dialog box!
-    </dialog>
 
     <script src="./js/main.js"></script>
 </body>
