--- a/lesson3/lesson3/index.html
+++ b/lesson3/lesson3/index.html
@@ -21,6 +21,8 @@
                 <div class="col4"></div>
                 <div class="col5">Цена</div>
             </div>
+            <div class="cart-list__products"></div>
+            <div class="cart-list__amount"></div>
         </div>
     </header>
 
