--- a/lesson5/lesson5/index.html
+++ b/lesson5/lesson5/index.html
@@ -14,17 +14,34 @@
             <div class="logo">Интернет-магазин</div>
             <div class="cart">
                 <form action="#" class="search-form">
-                    <input type="text" class="search-field">
-                    <button class="btn-search" type="submit">
+                    <input type="text" class="search-field" v-model="searchLine">
+                    <button class="btn-search" type="submit" @click="filter()">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <button class="btn-cart" type="button">Корзина</button>
+                <button class="btn-cart" type="button" @click="isVisibleCart = !isVisibleCart">Корзина</button>
+                <div v-show="isVisibleCart" class="cart-block">
+                    <div v-if="!cartProducts.length" class="message">Корзина пуста!<br>Добавьте товар в корзину</div>
+                    <div class="cart-item" v-for="item of cartProducts" :key="item.id_product">
+                        <div class="product-bio">
+                            <img :src="imgCart" alt="Some image">
+                            <div class="product-desc">
+                                <p class="product-title">{{item.product_name}}</p>
+                                <p class="product-quantity">Количество: {{item.quantity}}</p>
+                                <p class="product-single-price">{{item.price}} за ед.</p>
+                            </div>
+                        </div>
+                        <div class="right-block">
+                            <p class="product-price">{{item.quantity * item.price}} ₽</p>
+                            <button class="del-btn" @click="removeProduct(item)">&times;</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
         <main>
             <div class="products">
-                <div class="product-item" v-for="product of products" :key="product.id_product">
+                <div v-show="product.isShow" class="product-item" v-for="product of products" :key="product.id_product">
                     <img :src="imgCatalog" alt="Some img">
                     <div class="desc">
                         <h3>{{product.product_name}}</h3>
